--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.1",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.4"
   },
